force-app/main/default/objects/Order/fields/ACMContract__c.field-meta.xml
<CustomField>
    <fullName>ACMContract__c</fullName>
    <label>Contrato ACM</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>