force-app/main/default/objects/Order/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal de Distribuição</label>
    <referenceTo>ActivitySector__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>