force-app/main/default/objects/Order/fields/AmountOrderItem__c.field-meta.xml
<CustomField>
    <fullName>AmountOrderItem__c</fullName>
    <label>Saldo item do Pedido</label>
    <summarizedField>OrderItem.ItemBalance__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>