force-app/main/default/objects/Order/fields/AmountUse__c.field-meta.xml
<CustomField>
    <fullName>AmountUse__c</fullName>
    <label>Quantidade Utilizada</label>
    <summarizedField>OrderItem.AmountUsed__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>