force-app/main/default/objects/Order/fields/ApprovalBranchManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovalBranchManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador - Gerente Filial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>