force-app/main/default/objects/Order/fields/ApprovalDirector__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador - Diretor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos3</relationshipName>
    <type>Lookup</type>
</CustomField>