force-app/main/default/objects/Order/fields/ApprovalJustification__c.field-meta.xml
<CustomField>
    <fullName>ApprovalJustification__c</fullName>
    <label>Justificativa para aprovação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>