force-app/main/default/objects/Order/fields/ApprovalRegionalManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador - Gerente Regional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>