force-app/main/default/objects/Order/fields/ApprovalTowerDirector__c.field-meta.xml
<CustomField>
    <fullName>ApprovalTowerDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador - Diretor Torre</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>