force-app/main/default/objects/Order/fields/Aprovador_ComiteMargem__c.field-meta.xml
<CustomField>
    <fullName>Aprovador_ComiteMargem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador - Comitê de Margem</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>