force-app/main/default/objects/Order/fields/AvailableItem__c.field-meta.xml
<CustomField>
    <fullName>AvailableItem__c</fullName>
    <label>Saldo dos Itens</label>
    <summarizedField>OrderItem.AvailableQuantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>