force-app/main/default/objects/Order/fields/BPStorage__c.field-meta.xml
<CustomField>
    <fullName>BPStorage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BP Armazenagem</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (BP Armazenagem)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>