force-app/main/default/objects/Order/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motivo de Cancelamento</label>
    <referenceTo>CancelReason__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>