force-app/main/default/objects/Order/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <formula>CASE(Company__r.ClientGroup__c,
&apos;NOVO&apos;, &apos;NÃO SEGMENTADO&apos;,
&apos;07&apos;, &apos;REDISTRIBUIÇÃO&apos;,
&apos;01&apos;, &apos;MODULAR&apos;,
&apos;04&apos;, &apos;CLÁSSICO&apos;,
&apos;03&apos;, &apos;INOVADOR&apos;,
&apos;02&apos;, &apos;CLUBE A&apos;,
&apos;05&apos;, &apos;CONECTA&apos;,
&apos;06&apos;, &apos;DINÂMICO&apos;,
&apos;08&apos;, &apos;FORNECEDOR&apos;,
&apos;11&apos;, &apos;NOVO&apos;,
&apos;10&apos;, &apos;FUNCIONÁRIO&apos;,
&apos;Não encontrado&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo do Cliente</label>
    <type>Text</type>
</CustomField>