force-app/main/default/objects/Order/fields/CodigoSap__c.field-meta.xml
<CustomField>
    <fullName>CodigoSap__c</fullName>
    <externalId>true</externalId>
    <label>Número do Pedido App</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>