force-app/main/default/objects/Order/fields/CompanyReceiver__c.field-meta.xml
<CustomField>
    <fullName>CompanyReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Recebedor</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Orders (Empresa Recebedor)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>