force-app/main/default/objects/Order/fields/ContagemItens__c.field-meta.xml
<CustomField>
    <fullName>ContagemItens__c</fullName>
    <label>ContagemItens</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>