force-app/main/default/objects/Order/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Cultura__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>