force-app/main/default/objects/Order/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Moeda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>