force-app/main/default/objects/Order/fields/CustomerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNumber__c</fullName>
    <label>Número Pedido Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>