force-app/main/default/objects/Order/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diretor</label>
    <type>Checkbox</type>
</CustomField>