force-app/main/default/objects/Order/fields/EffectiveOrderDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveOrderDate__c</fullName>
    <label>Data de Pedido Efetivado</label>
    <type>Date</type>
</CustomField>