force-app/main/default/objects/Order/fields/ErrorIntegrationSAP__c.field-meta.xml
<CustomField>
    <fullName>ErrorIntegrationSAP__c</fullName>
    <inlineHelpText>Quando houver a tentativa de integrar com SAP e ocorrer um erro a mensagem estará aqui</inlineHelpText>
    <label>Mensagem de Erro ao Integrar</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>