force-app/main/default/objects/Order/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Modalidade de Frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y1</fullName>
            </value>
            <value>
                <fullName>Z1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>