force-app/main/default/objects/Order/fields/Gerente_Regional__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Regional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerente Regional</label>
    <type>Checkbox</type>
</CustomField>