force-app/main/default/objects/Order/fields/Hectare__c.field-meta.xml
<CustomField>
    <fullName>Hectare__c</fullName>
    <label>Hectare</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>