force-app/main/default/objects/Order/fields/Higher_Discount__c.field-meta.xml
<CustomField>
    <fullName>Higher_Discount__c</fullName>
    <label>Maior Desconto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>