force-app/main/default/objects/Order/fields/Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms2__c</fullName>
    <label>Incoterms 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>