force-app/main/default/objects/Order/fields/IsDisableSendIntegration__c.field-meta.xml
<CustomField>
    <fullName>IsDisableSendIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Está desabilitado o envio?</label>
    <type>Checkbox</type>
</CustomField>