force-app/main/default/objects/Order/fields/IsOrderMother__c.field-meta.xml
<CustomField>
    <fullName>IsOrderMother__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É Pedido Mãe?</label>
    <type>Checkbox</type>
</CustomField>