force-app/main/default/objects/Order/fields/ItemBalanceValue__c.field-meta.xml
<CustomField>
    <fullName>ItemBalanceValue__c</fullName>
    <label>Saldo em valor dos itens</label>
    <summarizedField>OrderItem.BalanceValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>