force-app/main/default/objects/Order/fields/Manager_BranchOffice__c.field-meta.xml
<CustomField>
    <fullName>Manager_BranchOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerente Filial</label>
    <type>Checkbox</type>
</CustomField>