force-app/main/default/objects/Order/fields/MarginCommittee__c.field-meta.xml
<CustomField>
    <fullName>MarginCommittee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comitê de Margem</label>
    <type>Checkbox</type>
</CustomField>