force-app/main/default/objects/Order/fields/MTO__c.field-meta.xml
<CustomField>
    <fullName>MTO__c</fullName>
    <label>MTO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZVNO</fullName>
                <label>Venda Normal</label>
            </value>
            <value>
                <fullName>ZVVO</fullName>
                <label>Venda a Ordem</label>
            </value>
            <value>
                <fullName>ZRCO</fullName>
                <label>Venda Conta e Ordem</label>
            </value>
            <value>
                <fullName>ZVBA</fullName>
                <label>Venda Barter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>