force-app/main/default/objects/Order/fields/NumeroPedidoApp__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoApp__c</fullName>
    <description>Número de identificação do pedido fornecido pelo App Digital.</description>
    <externalId>true</externalId>
    <inlineHelpText>Número de identificação do pedido fornecido pelo App Digital.</inlineHelpText>
    <label>Número do Pedido App</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>