force-app/main/default/objects/Order/fields/OrderMargin__c.field-meta.xml
<CustomField>
    <fullName>OrderMargin__c</fullName>
    <label>Margem do pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>