force-app/main/default/objects/Order/fields/OrderReason__c.field-meta.xml
<CustomField>
    <fullName>OrderReason__c</fullName>
    <label>Motivo da Ordem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Visita</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Contato estabelecido em feira comercial</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Anúncio de televisão</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Recomendação de cliente</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Publicidade de jornal</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Preço excelente</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Fornecimento rápido</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Bom serviço</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Devolução acelerada</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Diferença de preço: preço alto demais</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Fraca qualidade</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Danificado em trânsito</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Diferença de quantidades</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Mercadoria deteriorada</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Amostra gratuita</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Diferença preço: preço demasiado baixo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>