force-app/main/default/objects/Order/fields/OrderReference__c.field-meta.xml
<CustomField>
    <fullName>OrderReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Mãe</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos Filhos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>