force-app/main/default/objects/Order/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Tipo de Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pedido Filho</fullName>
            </value>
            <value>
                <fullName>Pedido Mãe</fullName>
            </value>
            <value>
                <fullName>Pedido Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>