force-app/main/default/objects/Order/fields/OthersDescription__c.field-meta.xml
<CustomField>
    <fullName>OthersDescription__c</fullName>
    <label>Descrição Outros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>