force-app/main/default/objects/Order/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipName>PedidosCondicao</relationshipName>
    <type>Lookup</type>
</CustomField>