force-app/main/default/objects/Order/fields/PaymentForm__c.field-meta.xml
<CustomField>
    <fullName>PaymentForm__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Cessão Crédito</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Boleto</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Operação Barter</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Dinheiro/Adiantamento</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Encontro de Contas</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Cheque Recebido</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>DOC</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Operação CRA</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>TED</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>DOC/TED</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Transferência</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>PIX</label>
            </value>
            <value>
                <fullName>Bonificação</fullName>
                <isActive>false</isActive>
                <label>Bonificação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>