force-app/main/default/objects/Order/fields/SalesCondition__c.field-meta.xml
<CustomField>
    <fullName>SalesCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Vendas</label>
    <referenceTo>SalesCondition__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>