force-app/main/default/objects/Order/fields/SalesCTV__c.field-meta.xml
<CustomField>
    <fullName>SalesCTV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTV da Venda</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>