force-app/main/default/objects/Order/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <formula>Company__r.SalesOffice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escritório de Vendas</label>
    <type>Text</type>
</CustomField>