force-app/main/default/objects/Order/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <formula>Company__r.SalesTeam__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe de Vendas</label>
    <type>Text</type>
</CustomField>