force-app/main/default/objects/Order/fields/ShippingAccount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Entrega</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>