force-app/main/default/objects/Order/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <label>Data de Entrega</label>
    <type>Date</type>
</CustomField>