force-app/main/default/objects/Order/fields/StageStatusApproval__c.field-meta.xml
<CustomField>
    <fullName>StageStatusApproval__c</fullName>
    <label>Etapa/Status da Aprovação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>