force-app/main/default/objects/Order/fields/StatusRecusa__c.field-meta.xml
<CustomField>
    <fullName>StatusRecusa__c</fullName>
    <description>Status de recusa do pedido.</description>
    <inlineHelpText>Status de recusa do pedido.</inlineHelpText>
    <label>Status Recusa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>