force-app/main/default/objects/Order/fields/StatusSF__c.field-meta.xml
<CustomField>
    <fullName>StatusSF__c</fullName>
    <label>Status SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em digitação</fullName>
                <default>true</default>
                <label>Em digitação</label>
            </value>
            <value>
                <fullName>Em aprovação - Gerente Filial</fullName>
            </value>
            <value>
                <fullName>Em Aprovação - Gerente Regional</fullName>
            </value>
            <value>
                <fullName>Em Aprovação - Diretor</fullName>
            </value>
            <value>
                <fullName>Em Aprovação - Diretor Torre</fullName>
            </value>
            <value>
                <fullName>Em Aprovação - Comitê Margem</fullName>
            </value>
            <value>
                <fullName>Em Aprovação - Mesa de Grãos</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>