force-app/main/default/objects/Order/fields/TotalAmountBrokerage__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBrokerage__c</fullName>
    <label>Valor Total Corretagem</label>
    <summarizedField>OrderItem.Brokerage__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>