force-app/main/default/objects/Order/fields/TotalDicountValue__c.field-meta.xml
<CustomField>
    <fullName>TotalDicountValue__c</fullName>
    <label>Valor Total de Desconto</label>
    <summarizedField>OrderItem.DiscountValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>