force-app/main/default/objects/Order/fields/TotalRoyaltiesAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRoyaltiesAmount__c</fullName>
    <label>Valor Total Royalties</label>
    <summarizedField>OrderItem.TotalRoyaltyAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>