force-app/main/default/objects/Order/fields/TotalTSIAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTSIAmount__c</fullName>
    <label>Valor Total TSI</label>
    <summarizedField>OrderItem.TSIValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>