force-app/main/default/objects/Order/fields/TowerDirector__c.field-meta.xml
<CustomField>
    <fullName>TowerDirector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diretor Torre</label>
    <type>Checkbox</type>
</CustomField>