force-app/main/default/objects/Order/recordTypes/EntregaArmazemGeral.recordType-meta.xml
<RecordType>
    <fullName>EntregaArmazemGeral</fullName>
    <active>true</active>
    <label>Entrega Armazém Geral</label>
</RecordType>