force-app/main/default/objects/Order/recordTypes/RemessasPromocionais.recordType-meta.xml
<RecordType>
    <fullName>RemessasPromocionais</fullName>
    <active>true</active>
    <label>Remessas Promocionais</label>
</RecordType>