force-app/main/default/objects/Order/recordTypes/VendaAmostraGratis.recordType-meta.xml
<RecordType>
    <fullName>VendaAmostraGratis</fullName>
    <active>true</active>
    <label>Venda Amostra Grátis</label>
</RecordType>