force-app/main/default/objects/Order/recordTypes/VendaBarter.recordType-meta.xml
<RecordType>
    <fullName>VendaBarter</fullName>
    <active>true</active>
    <label>Venda Barter</label>
</RecordType>