force-app/main/default/objects/Order/recordTypes/VendaBonificacao.recordType-meta.xml
<RecordType>
    <fullName>VendaBonificacao</fullName>
    <active>true</active>
    <label>Venda Bonificação</label>
</RecordType>