force-app/main/default/objects/Order/recordTypes/VendaContaOrdem.recordType-meta.xml
<RecordType>
    <fullName>VendaContaOrdem</fullName>
    <active>true</active>
    <label>Venda Conta e Ordem</label>
</RecordType>