force-app/main/default/objects/Order/recordTypes/VendaEntregaFutura.recordType-meta.xml
<RecordType>
    <fullName>VendaEntregaFutura</fullName>
    <active>true</active>
    <label>Venda Entrega Futura</label>
</RecordType>