force-app/main/default/objects/Order/recordTypes/VendaFinsEspecificosExportacao.recordType-meta.xml
<RecordType>
    <fullName>VendaFinsEspecificosExportacao</fullName>
    <active>true</active>
    <label>Venda Fins Específicos Exportação</label>
</RecordType>