force-app/main/default/objects/Order/recordTypes/VendaInsumos.recordType-meta.xml
<RecordType>
    <fullName>VendaInsumos</fullName>
    <active>true</active>
    <label>Venda Insumos</label>
</RecordType>