force-app/main/default/objects/Order/recordTypes/VendaNormal.recordType-meta.xml
<RecordType>
    <fullName>VendaNormal</fullName>
    <active>true</active>
    <label>Venda Normal</label>
</RecordType>