force-app/main/default/objects/Order/recordTypes/VendaNormalSemTransitoEstadoOrigem.recordType-meta.xml
<RecordType>
    <fullName>VendaNormalSemTransitoEstadoOrigem</fullName>
    <active>true</active>
    <label>Venda Normal Sem Trânsito Estado Origem</label>
</RecordType>