force-app/main/default/objects/Order/recordTypes/VendaOrdemSimplesFaturamento.recordType-meta.xml
<RecordType>
    <fullName>VendaOrdemSimplesFaturamento</fullName>
    <active>true</active>
    <label>Venda Ordem Simples Faturamento</label>
</RecordType>