force-app/main/default/objects/Order/recordTypes/VendaServico.recordType-meta.xml
<RecordType>
    <fullName>VendaServico</fullName>
    <active>true</active>
    <label>Venda de Serviço</label>
</RecordType>