force-app/main/default/objects/Order/recordTypes/VendaSucata.recordType-meta.xml
<RecordType>
    <fullName>VendaSucata</fullName>
    <active>true</active>
    <label>Venda Sucata</label>
</RecordType>