force-app/main/default/objects/Order/recordTypes/VendaZonaFranca.recordType-meta.xml
<RecordType>
    <fullName>VendaZonaFranca</fullName>
    <active>true</active>
    <label>Venda Zona Franca</label>
</RecordType>