force-app/main/default/objects/Order/validationRules/Itens_do_Pedido.validationRule-meta.xml
<ValidationRule>
    <fullName>Itens_do_Pedido</fullName>
    <active>true</active>
    <description>Impede o usuário de excluir itens de um pedido já gerado.</description>
    <errorConditionFormula>PRIORVALUE(ContagemItens__c) &gt; ContagemItens__c &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
NOT(ISPICKVAL(Status, &apos;Pré Pedido&apos; ))</errorConditionFormula>
    <errorMessage>Você não tem permissão para excluir itens do pedido.</errorMessage>
</ValidationRule>