force-app/main/default/objects/Order/validationRules/NaoPermiteAlteracaoCodigoSap.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoPermiteAlteracaoCodigoSap</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name != &apos;System Administrator&apos;,
CodigoSap__c != null,
ispickval( StatusSF__c , &apos;Integrado&apos;)
)</errorConditionFormula>
    <errorMessage>Não é permitido alterar um Pedido que esteja integrado com o SAP.</errorMessage>
</ValidationRule>